- Added images to README file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,18 @@
 <resources>
     <string name="app_name">Pop Movies</string>
     <string name="popular_movies">Pop Movies</string>
-    <string name="nanodegree_apps">My Nanodegree Apps!</string>
-    <string name="popular_movies_button">Popular Movies</string>
-    <string name="stock_hawk_button">Stock Hawk</string>
-    <string name="stock_hawk_button_toast">This button will launch Stock Hawk App!</string>
-    <string name="buildit_bigger_button">Build It Bigger</string>
-    <string name="buildit_bigger_button_toast">This button will launch Build It Bigger App!</string>
-    <string name="make_your_app_material_button">Make Your App Material</string>
-    <string name="make_your_app_material_button_toast">This button will launch Make Your App Material App!</string>
-    <string name="go_ubiquitous_button">Go Ubiquitous</string>
-    <string name="go_ubiquitous_button_toast">This button will launch Go Ubiquitous App!</string>
-    <string name="capstone_button">Capstone</string>
-    <string name="capstone_button_toast">This button will launch Capstone App!</string>
+    <!--<string name="nanodegree_apps">My Nanodegree Apps!</string>-->
+    <!--<string name="popular_movies_button">Popular Movies</string>-->
+    <!--<string name="stock_hawk_button">Stock Hawk</string>-->
+    <!--<string name="stock_hawk_button_toast">This button will launch Stock Hawk App!</string>-->
+    <!--<string name="buildit_bigger_button">Build It Bigger</string>-->
+    <!--<string name="buildit_bigger_button_toast">This button will launch Build It Bigger App!</string>-->
+    <!--<string name="make_your_app_material_button">Make Your App Material</string>-->
+    <!--<string name="make_your_app_material_button_toast">This button will launch Make Your App Material App!</string>-->
+    <!--<string name="go_ubiquitous_button">Go Ubiquitous</string>-->
+    <!--<string name="go_ubiquitous_button_toast">This button will launch Go Ubiquitous App!</string>-->
+    <!--<string name="capstone_button">Capstone</string>-->
+    <!--<string name="capstone_button_toast">This button will launch Capstone App!</string>-->
     <string name="movie_db_api_key"></string>
     <string name="movies_order_by_shared_preferences_key">orderBy</string>
     <string name="movies_order_by_title">Order Movies</string>
